--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,12 @@ a:hover { color: #a26f57; }
   margin: auto;
 }
 
+.center-large {
+  max-width: 100%;
+  max-height: 100vh;
+  margin: auto;
+}
+
 .center-text {
   text-align: center;
 }
