--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ a:hover { color: #a26f57; }
    display: grid;
    height: 70%;
    padding-top: 110px;
+   margin: auto;
 }
 
 .center-fit {
@@ -38,7 +39,7 @@ a:hover { color: #a26f57; }
 }
 
 .center-large {
-  max-width: 95%;
+  max-width: 100%;
   max-height: 60vh;
   margin: auto;
 }
